# saycheese-review

./: .gitignore  Cargo.toml  missing.html  shell.nix
src/: airtable.rs  index.html  main.rs
src/airtable/: api.rs  mod.rs  types.rs
static/: email.html  index.html
