[package]
name = "saycheese-review"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
url = "2.5.4"
